prusti-tests/tests/verify/ui/false.stderr
error: [Prusti: verification error] postcondition might not hold.
 --> $DIR/false.rs:7:11
  |
7 | #[ensures(false)]
  |           ^^^^^
  |
note: the error originates here
 --> $DIR/false.rs:8:1
  |
8 | fn test1() {}
  | ^^^^^^^^^^^^^

error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/false.rs:11:5
   |
11 |     assert!(false);
   |     ^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

